--- a/Hosee/Hosee/Base.lproj/Main.storyboard
+++ b/Hosee/Hosee/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4YE-B2-OJr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4YE-B2-OJr">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -144,17 +144,17 @@
                                         </state>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="NzL-xD-duo">
-                                        <rect key="frame" x="8" y="54.5" width="260" height="25"/>
+                                        <rect key="frame" x="8" y="54.5" width="260" height="50"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oS3-d3-bhS">
-                                                <rect key="frame" x="0.0" y="0.0" width="242" height="25"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="242" height="50"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="     Thông báo" image="notification">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="16" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xgr-Fl-BwP">
-                                                <rect key="frame" x="242" y="4.5" width="18" height="20.5"/>
+                                                <rect key="frame" x="242" y="29.5" width="18" height="20.5"/>
                                                 <color key="backgroundColor" red="1" green="0.080364982530000004" blue="0.013164550279999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -163,21 +163,21 @@
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hbi-TF-dZ7">
-                                        <rect key="frame" x="8" y="87.5" width="260" height="25"/>
+                                        <rect key="frame" x="8" y="112.5" width="260" height="50"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="     Trợ Giúp" image="Help">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y0X-9t-5qe">
-                                        <rect key="frame" x="8" y="120.5" width="260" height="25"/>
+                                        <rect key="frame" x="8" y="170.5" width="260" height="50"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="     S.O.S" image="SOS">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="chS-Qn-fau">
-                                        <rect key="frame" x="8" y="153.5" width="260" height="25"/>
+                                        <rect key="frame" x="8" y="228.5" width="260" height="25"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="     Giới thiệu về App" image="GIới thiệu">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -223,14 +223,22 @@
             </objects>
             <point key="canvasLocation" x="-464" y="936"/>
         </scene>
+        <!--booking-->
+        <scene sceneID="jNG-J3-JQ3">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Booking" referencedIdentifier="booking" id="OBH-MN-S25" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Uz-CN-ht5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="790" y="877"/>
+        </scene>
     </scenes>
     <resources>
         <image name="GIới thiệu" width="25" height="25"/>
-        <image name="Help" width="25" height="25"/>
-        <image name="History" width="25" height="25"/>
-        <image name="SOS" width="25" height="25"/>
-        <image name="imageItem" width="25" height="25"/>
-        <image name="myimage" width="704" height="396"/>
-        <image name="notification" width="25" height="25"/>
+        <image name="Help" width="50" height="50"/>
+        <image name="History" width="50" height="50"/>
+        <image name="SOS" width="50" height="50"/>
+        <image name="imageItem" width="50" height="50"/>
+        <image name="myimage" width="1408" height="792"/>
+        <image name="notification" width="50" height="50"/>
     </resources>
 </document>
